JDK 11 changes