@@ -6,28 +6,19 @@
 
     <groupId>com.jvmtop</groupId>
     <artifactId>jvmtop</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
             <artifactId>jopt-simple</artifactId>
-            <version>4.5</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>${jdk.version}</version>
-            <scope>system</scope>
-            <systemPath>${toolsjar}</systemPath>
+            <version>5.0.4</version>
         </dependency>
     </dependencies>
 
 
     <properties>
-        <!-- change it to point to your tools.jar from your JDK -->
-        <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
-        <jdk.version>1.6</jdk.version>
+        <jdk.version>11</jdk.version>
     </properties>
 
     <build>
@@ -35,7 +26,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>3.3.0</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -73,16 +64,28 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
+                    <compilerArgs>
+                        <compilerArg>--add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports=java.rmi/sun.rmi.transport=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports=java.base/jdk.internal.perf=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports=java.management/sun.management.counter.perf=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports=java.management/sun.management.counter=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports=jdk.management.agent/jdk.internal.agent=ALL-UNNAMED</compilerArg>
+
+                    </compilerArgs>
+
+                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -91,7 +94,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>  
+            </plugin>
         </plugins>
     </build>
 </project>
