@@ -1,9 +1,9 @@
 #!/bin/sh
-# jvmtop - java monitoring for the command-line 
+# jvmtop - java monitoring for the command-line
 # launch script
 #
 # author: Markus Kolb
-# 
+#
 DIR=$( cd $(dirname $0) ; pwd -P )
 
 if [ -z "$JAVA_HOME" ] ; then
@@ -11,13 +11,21 @@ if [ -z "$JAVA_HOME" ] ; then
         sed 's/\/bin\/java//'`
 fi
 
-TOOLSJAR="$JAVA_HOME/lib/tools.jar"
+JMX_OPTS="$JMX_OPTS -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9999"
+JMX_OPTS="$JMX_OPTS -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false"
 
-if [ ! -f "$TOOLSJAR" ] ; then
-        echo "$JAVA_HOME seems to be no JDK!" >&2
-        exit 1
-fi
+#JAVA_DEBUG_OPTS="-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:9002"
+JAVA_MODULES="--add-modules java.se
+                --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                --add-exports=java.base/jdk.internal.perf=ALL-UNNAMED
+                --add-exports=java.management/sun.management.counter.perf=ALL-UNNAMED
+                --add-exports=java.management/sun.management.counter=ALL-UNNAMED
+                --add-exports=jdk.management.agent/jdk.internal.agent=ALL-UNNAMED
+                --add-opens java.rmi/sun.rmi.server=ALL-UNNAMED
+                --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
+                --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"
 
-"$JAVA_HOME"/bin/java $JAVA_OPTS -cp "$DIR/jvmtop.jar:$TOOLSJAR" \
+"$JAVA_HOME"/bin/java $JMX_OPTS $JAVA_DEBUG_OPTS $JAVA_MODULES $JAVA_OPTS -cp "$DIR/jvmtop.jar" \
 com.jvmtop.JvmTop "$@"
 exit $?
